[gd_scene load_steps=35 format=3 uid="uid://b7m7h4qtofick"]

[ext_resource type="Script" uid="uid://e8nva4cokftk" path="res://scripts/main.gd" id="1_a8y0u"]
[ext_resource type="Script" uid="uid://xahqtpywrhur" path="res://scripts/DiceManager.gd" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://bdntqfylrgqin" path="res://scripts/game_manager.gd" id="3_tbgi4"]
[ext_resource type="PackedScene" uid="uid://b7v476mpp1mce" path="res://scenes/game_ui.tscn" id="4_tefeu"]
[ext_resource type="Material" uid="uid://sw3c6bdtt7nn" path="res://Addons/wood_table_worn.tres" id="5_dp3eg"]
[ext_resource type="Script" uid="uid://cuo3s74iioord" path="res://scripts/dice_effects.gd" id="7_ya4ey"]
[ext_resource type="Material" uid="uid://c31e6cfikugb6" path="res://Addons/wood_cabinet_worn_long.tres" id="8_85g3d"]
[ext_resource type="Script" uid="uid://dnlh0qdi4ux0n" path="res://scripts/audio_manager.gd" id="8_eb6dy"]
[ext_resource type="AudioStream" uid="uid://d325qh0udb7g0" path="res://audio/sfx/dice_roll.ogg" id="8_trceg"]
[ext_resource type="AudioStream" uid="uid://c4mrlpqi87jgx" path="res://audio/sfx/button_click.ogg" id="9_a8y0u"]
[ext_resource type="AudioStream" uid="uid://cxqpay2y0ndub" path="res://audio/sfx/bank_sound.ogg" id="9_muem4"]
[ext_resource type="Script" uid="uid://c06qq7i0o6ndu" path="res://scripts/camera_controller.gd" id="9_ya4ey"]
[ext_resource type="AudioStream" uid="uid://dblw44wbqamsc" path="res://audio/sfx/dice_shake.ogg" id="10_a8y0u"]
[ext_resource type="AudioStream" uid="uid://ddbaw0gnbjvbt" path="res://audio/sfx/points_scored.ogg" id="11_dp3eg"]
[ext_resource type="Script" uid="uid://du51clmvopkqb" path="res://scenes/ui_effects_manager.gd" id="15_jbj1t"]
[ext_resource type="PackedScene" uid="uid://cxynio0d2samn" path="res://Addons/textures/cup_dice.glb" id="17_0ld40"]
[ext_resource type="FontFile" uid="uid://cxuo3nlinnhth" path="res://Addons/Font/Diploma/diploma.ttf" id="17_dp3eg"]
[ext_resource type="Script" uid="uid://ddsx81g0410oy" path="res://scripts/table_player_name_3d.gd" id="17_muem4"]
[ext_resource type="PackedScene" uid="uid://cl65qwvvlca5j" path="res://Addons/textures/beer.glb" id="19_0ld40"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_muem4"]
friction = 0.6
bounce = 0.15

[sub_resource type="BoxMesh" id="BoxMesh_sgp6g"]
material = ExtResource("8_85g3d")
uv2_padding = 5.17
size = Vector3(20, 0.2, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_o5qli"]
size = Vector3(20, 0.2, 20)

[sub_resource type="BoxMesh" id="BoxMesh_tbgi4"]
material = ExtResource("8_85g3d")
size = Vector3(20, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_tefeu"]
size = Vector3(20, 10, 0.6508789)

[sub_resource type="BoxMesh" id="BoxMesh_o6xl0"]
material = ExtResource("8_85g3d")
size = Vector3(20, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_tipki"]
size = Vector3(20, 10, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_85g3d"]
material = ExtResource("8_85g3d")
size = Vector3(21, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_choun"]
size = Vector3(22, 10, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_ya4ey"]
material = ExtResource("8_85g3d")
size = Vector3(21, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_eb6dy"]
size = Vector3(22, 10, 0.5)

[sub_resource type="Environment" id="Environment_tefeu"]

[sub_resource type="Compositor" id="Compositor_o6xl0"]

[sub_resource type="BoxMesh" id="BoxMesh_tipki"]
material = ExtResource("5_dp3eg")
size = Vector3(50, 10, 30)

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_a8y0u"]
stream_count = 1
stream_0/stream = ExtResource("10_a8y0u")
stream_0/volume = 0.0

[node name="Main" type="Node3D"]
top_level = true
script = ExtResource("1_a8y0u")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 8)
cull_mask = 1040383
script = ExtResource("9_ya4ey")
shake_position = Vector3(9, 2, 12)
shake_rotation = Vector3(-0.1, 0.4, 0)

[node name="Table" type="StaticBody3D" parent="."]
physics_interpolation_mode = 1
physics_material_override = SubResource("PhysicsMaterial_muem4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.09241402, -0.0790205, 0.11758852)
mesh = SubResource("BoxMesh_sgp6g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table"]
shape = SubResource("BoxShape3D_o5qli")

[node name="Wall" type="StaticBody3D" parent="Table"]

[node name="Wall FR" type="MeshInstance3D" parent="Table/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.23, 10)
mesh = SubResource("BoxMesh_tbgi4")

[node name="Wall FR2" type="CollisionShape3D" parent="Table/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 9.924561)
shape = SubResource("BoxShape3D_tefeu")

[node name="Wall BC" type="MeshInstance3D" parent="Table/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.23, -10)
mesh = SubResource("BoxMesh_o6xl0")

[node name="Wall BC2" type="CollisionShape3D" parent="Table/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -10)
shape = SubResource("BoxShape3D_tipki")

[node name="Wall LF2" type="MeshInstance3D" parent="Table/Wall"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -10, -0.23, 0)
mesh = SubResource("BoxMesh_85g3d")

[node name="Wall LF" type="CollisionShape3D" parent="Table/Wall"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -10, 4, 0)
shape = SubResource("BoxShape3D_choun")

[node name="Wall RG" type="MeshInstance3D" parent="Table/Wall"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 10.1, -0.23, 0)
mesh = SubResource("BoxMesh_ya4ey")

[node name="Wall RG2" type="CollisionShape3D" parent="Table/Wall"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 10, 4, 0)
shape = SubResource("BoxShape3D_eb6dy")

[node name="DiceManager" type="Node3D" parent="."]
script = ExtResource("2_0wfyh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.8660254, -0.3535534, 0.3535534, 0, 0.7071068, 0.7071068, -0.5, -0.61237246, 0.61237246, 1.62146, 5.8165894, 10.7933445)
light_color = Color(1, 0.88913506, 0.75377584, 1)
light_energy = 1.5
light_indirect_energy = 1.2
light_volumetric_fog_energy = 0.8
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 0.8
shadow_blur = 0.4

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tefeu")
compositor = SubResource("Compositor_o6xl0")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8576074, -0.5143048, 0, 0.5143048, 0.8576074, 0, 8.834, -12)
light_color = Color(0.627451, 0.7058824, 1, 1)
light_energy = 0.5
omni_shadow_mode = 0

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(-4.3711392e-08, -0.017452406, -0.9998478, 0, 0.9998477, -0.017452408, 1.0000001, -7.628689e-10, -4.3704734e-08, -14.171, 0.575, 0.058)
spot_range = 6.9287558
spot_angle = 24.477222

[node name="Stul" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.055847168, -5.1, -0.03983879)
mesh = SubResource("BoxMesh_tipki")

[node name="DiceEffects" type="Node3D" parent="."]
script = ExtResource("7_ya4ey")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("8_eb6dy")
dice_roll_sounds = Array[AudioStream]([ExtResource("8_trceg")])
dice_select_sound = ExtResource("9_muem4")
button_click_sound = ExtResource("9_a8y0u")
score_sound = ExtResource("11_dp3eg")
cup_shake_sounds = Array[AudioStream]([SubResource("AudioStreamSynchronized_a8y0u")])

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_tbgi4")

[node name="UIEffectsManager" type="Node" parent="."]
script = ExtResource("15_jbj1t")

[node name="GameUI" parent="." instance=ExtResource("4_tefeu")]

[node name="TablePlayerName" type="Node3D" parent="."]
script = ExtResource("17_muem4")
text_color = Color(0.25222564, 0.12641208, 0.037614115, 1)
text_size = 500
outline_size = 10
outline_color = Color(0.4, 0.22745098, 0.10980392, 1)
custom_font = ExtResource("17_dp3eg")
position_x = 5.0
position_y = 0.2
position_z = 8.0
rotation_x_deg = -90.0

[node name="DiceCup" parent="." instance=ExtResource("17_0ld40")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)
throw_duration = 1.5

[node name="beer" parent="." instance=ExtResource("19_0ld40")]
transform = Transform3D(-1.4914094, 0, -0.23621601, 0, 1.51, 0, 0.23621601, 0, -1.4914094, -16.22, 3.958, 10.083)
